--- a/style.css
+++ b/style.css
@@ -1,22 +1,31 @@
-#container1 {
-    background-color: beige;
-    border: black;
+  #result{
+    background-color: lightyellow;
+    margin: auto;
+    width: 100%;
+    height: 2em; 
+    border: 1px solid brown;
+    border-radius: 15px;
+    padding: 1% 1% 1% 1%; 
+    text-align: right;
+    font-size: 2em;
   }
   
-  #container2 {
+  #container{
     background-color: beige;
     margin: auto;
-    width: 300px; /* Reduced width */
-    height: 400px; /* Reduced height */
-    padding: 1% 1% 1% 1%; /* Reduced padding */
+    width: 300px;
+    height: 500px; 
+    border: 1px solid brown;
+    border-radius: 25px;
+    padding: 1% 1% 1% 1%; 
     display: flex;
     flex-wrap: wrap;
   }
   
   button {
     flex: 1 1 25%;
-    padding: 15px; /* Reduced padding */
-    font-size: 1.2em; /* Reduced font size */
+    padding: 15px; 
+    font-size: 1.2em; 
     border: 1px solid #ccc;
     background-color: #f0f0f0;
     box-sizing: border-box;
@@ -34,3 +43,5 @@
     background: beige;
     border: none;
   }
+
+  
